syntax = "proto3";
package protocols;
option go_package = "github.com/movsb/taoblog/protocols";

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

enum PostType {
	PostType_Unspecified = 0;
	PostType_Post = 1;
	PostType_Page = 2;
}

message Post {
	int64 id = 1;
	google.protobuf.Timestamp date = 2;
	google.protobuf.Timestamp modified = 3;
	string title = 4;
	string content = 5;
	string slug = 6;
	PostType type = 7;
	int64 category = 8;
	string status = 9;
	int64 page_view = 10;
	bool comment_status = 11;
	int64 comments = 12;
	string metas = 13;
	string source = 14;
	string source_type = 15;
	repeated string tags = 16;
}

message UpdatePostRequest {
	Post post = 1;
	google.protobuf.FieldMask update_mask = 2;
}

message GetPostCommentsCountRequest {
	int64 post_id = 1;
}

message GetPostCommentsCountResponse {
	int64 count = 1;
}
